force-app/main/default/objects/Routing_Event__e/Routing_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event published after every routing transaction. Enables real-time observability for LWC dashboards, Flow automations, and external system integrations via CometD/Pub-Sub API. Published in Phase 5 of the RoutingEngine — after assignment DML and audit flush. PublishAfterCommit ensures events only fire when the routing transaction commits successfully.</description>
    <label>Routing Event</label>
    <pluralLabel>Routing Events</pluralLabel>
</CustomObject>