force-app/main/default/objects/Routing_Event__e/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <description>User ID of the agent who received the assignment. Null when routing did not result in an assignment (NO_MATCH, FAILED, etc.). Text instead of Lookup to avoid cross-object dependencies in the managed package.</description>
    <label>Assigned To</label>
    <length>18</length>
    <type>Text</type>
</CustomField>