force-app/main/default/objects/Routing_Event__e/fields/Candidate_Count__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Count__c</fullName>
    <description>Number of candidate records returned by the dynamic SOQL query before lock + assign. Zero indicates no matching records (NO_MATCH outcome). Useful for routing efficiency monitoring.</description>
    <label>Candidate Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>