force-app/main/default/objects/Routing_Event__e/fields/Config_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Developer_Name__c</fullName>
    <description>DeveloperName of the Routing_Config__mdt that was evaluated. Enables subscribers to filter events by routing configuration. Matches Config_Developer_Name__c on Routing_Log__c for cross-referencing.</description>
    <label>Config Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>