force-app/main/default/objects/Routing_Event__e/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Routing_Log__c record ID for cross-referencing the full audit trail. Enables subscribers to query Routing_Log__c for detailed bind snapshots, condition traces, and assignment metadata that exceeds Platform Event payload limits.</description>
    <label>Correlation Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>