force-app/main/default/objects/Routing_Event__e/fields/Entry_Point__c.field-meta.xml
<CustomField>
    <fullName>Entry_Point__c</fullName>
    <description>Integration surface that initiated the routing request: InvocableMethod, REST, LWC, or GlobalAction. Enables subscribers to distinguish between automated vs interactive routing.</description>
    <label>Entry Point</label>
    <length>40</length>
    <type>Text</type>
</CustomField>