force-app/main/default/objects/Routing_Event__e/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error description when routing fails. Null on successful assignment. Truncated to 255 characters to keep event payload within Platform Event size limits (1 MB for HighVolume).</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>