force-app/main/default/objects/Routing_Event__e/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Categorises the platform event. ROUTING = standard routing decision, STATUS_CHANGE = agent availability update. Subscribers can filter by type to route events to the correct handler.</description>
    <label>Event Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>