force-app/main/default/objects/Routing_Event__e/fields/Is_Dry_Run__c.field-meta.xml
<CustomField>
    <fullName>Is_Dry_Run__c</fullName>
    <description>True when the routing was a simulation (dryRun=true). Dry-run events are NOT published by default — this field exists for future use if admins opt-in to simulation event streaming.</description>
    <defaultValue>false</defaultValue>
    <label>Is Dry Run</label>
    <type>Checkbox</type>
</CustomField>