force-app/main/default/objects/Routing_Event__e/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>API name of the routed SObject (e.g. Case, Lead, Loan_Application__c). Enables subscribers to filter events by object type.</description>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>