force-app/main/default/objects/Routing_Event__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Salesforce ID of the record that was routed (e.g. Case, Lead, Custom Object). Text instead of Lookup to support any SObject type without hard dependencies.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>