force-app/main/default/objects/Routing_Event__e/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <description>Number of FOR UPDATE lock retries before the assignment resolved. Zero means no contention. Non-zero values indicate concurrent routing pressure — useful for capacity planning alerts.</description>
    <label>Retry Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>