force-app/main/default/objects/Routing_Event__e/fields/Routed_At__c.field-meta.xml
<CustomField>
    <fullName>Routed_At__c</fullName>
    <description>Server timestamp when the routing decision was made. Set by AuditLogger — same value as Routing_Log__c.Routed_At__c for correlation.</description>
    <label>Routed At</label>
    <type>DateTime</type>
</CustomField>