force-app/main/default/objects/Routing_Event__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Routing outcome status. Values mirror Routing_Log__c.Status__c: ASSIGNED, NO_MATCH, CAPABILITY_MISMATCH, CAPACITY_EXCEEDED, LOCK_CONTENTION, RETRY_EXHAUSTED, FAILED. Subscribers can filter for specific outcomes.</description>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>